--- a/lib/client/views/footer/footer.html
+++ b/lib/client/views/footer/footer.html
@@ -29,27 +29,17 @@
           </li>
         </ul>
       </div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-        <ul class="list-unstyled">
-          <li>
-            <a href="" class="fa fa-twitter-square fa-2x pull-right" data-event-category="link" data-event-action="link-click" data-event-label="external link click" data-event-value="twitter"></a>
-          </li>
-          <li>
-            <a href="" class="fa fa-facebook-square fa-2x pull-right" data-event-category="link" data-event-action="link-click" data-event-label="external link click" data-event-value="facebook"></a>
-          </li>
-          <li>
-            <a href="" class="fa fa-instagram fa-2x pull-right" data-event-category="link" data-event-action="link-click" data-event-label="external link click" data-event-value="instagram"></a>
-          </li>
-          <li>
-            <a href="" class="fa fa-pinterest-square fa-2x pull-right" data-event-category="link" data-event-action="link-click" data-event-label="external link click" data-event-value="pinterest"></a>
-          </li>
-          <li><br></li>
-        </ul>
-      </div>
       <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
         <div class="subscribe">
           {{> MailChimpListSubscribe}}
         </div>
+      </div>
+      <div class="col-xs-5 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-5">
+      <ul class="list-unstyled pull-right">
+        {{#each reactionApps provides="social" name="reaction-social"}}
+          {{> Template.dynamic template=template data=customSocialSettings }}
+        {{/each}}
+      </ul>
       </div>
     </div>
   </nav>
