--- a/lib/client/views/footer/footer.html
+++ b/lib/client/views/footer/footer.html
@@ -29,17 +29,19 @@
           </li>
         </ul>
       </div>
-      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-        <div class="subscribe">
-          {{> MailChimpListSubscribe}}
+      {{#if enabled}}
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+          <div class="subscribe">
+            {{> MailChimpListSubscribe}}
+          </div>
         </div>
-      </div>
+      {{/if}}
       <div class="col-xs-5 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-5">
-      <ul class="list-unstyled pull-right">
-        {{#each reactionApps provides="social" name="reaction-social"}}
-          {{> Template.dynamic template=template data=customSocialSettings }}
-        {{/each}}
-      </ul>
+        <ul class="list-unstyled pull-right">
+          {{#each reactionApps provides="social" name="reaction-social"}}
+            {{> Template.dynamic template=template data=customSocialSettings }}
+          {{/each}}
+        </ul>
       </div>
     </div>
   </nav>
